# sterlingwilde

./: index.html  vercel.json
ux-intel/: .gitignore  DESIGN.md  README.md  pyproject.toml
ux-intel/examples/example-session/: README.md  session.json
ux-intel/examples/example-session/intermediates/: moments.json  observations.json  video_metadata.json
ux-intel/examples/example-session/outputs/: clusters.json  context.md  issues.json  review.html  review.md
ux-intel/examples/example-session/outputs/packs/analyze/: README.md  moments.md  rubric.md
ux-intel/examples/example-session/outputs/packs/synthesize/: README.md  observations.json  rubric.md
ux-intel/src/ux_intel/: __init__.py  align.py  analyze.py  cli.py  ffmpeg_util.py  frames.py  ingest.py  overrides.py  pack.py  prompts.py  review.py  schemas.py  session.py  synthesize.py  transcribe.py  watch.py
